vendor/bicycl-rs-sys/capi/include/bicycl_capi.h

typedef enum bicycl_status_t {
  BICYCL_OK = 0,
  BICYCL_ERR_NULL_PTR = 1,
  BICYCL_ERR_INVALID_ARGUMENT = 2,
  BICYCL_ERR_ALLOCATION_FAILED = 3,
  BICYCL_ERR_INTERNAL = 4,
  BICYCL_ERR_BUFFER_TOO_SMALL = 5,
  BICYCL_ERR_PARSE = 6,
  BICYCL_ERR_INVALID_STATE = 7,
  BICYCL_ERR_VERIFY_FAILED = 8,
  BICYCL_ERR_PROTOCOL_ABORT = 9,
  BICYCL_ERR_CORE = 90,
  BICYCL_ERR_PAILLIER = 100,
  BICYCL_ERR_JOYE_LIBERT = 101,
  BICYCL_ERR_CL_HSMQK = 102,
  BICYCL_ERR_CL_HSM2K = 103,
  BICYCL_ERR_ECDSA = 104,
  BICYCL_ERR_TWO_PARTY_ECDSA = 105,
  BICYCL_ERR_CL_THRESHOLD = 106,
  BICYCL_ERR_CL_DLOG = 107,
  BICYCL_ERR_THRESHOLD_ECDSA = 108,
} bicycl_status_t;
typedef struct bicycl_context_t bicycl_context_t;
typedef struct bicycl_randgen_t bicycl_randgen_t;
typedef struct bicycl_cl_hsm2k_t bicycl_cl_hsm2k_t;
typedef struct bicycl_cl_hsm2k_pk_t bicycl_cl_hsm2k_pk_t;
typedef struct bicycl_cl_hsm2k_ct_t bicycl_cl_hsm2k_ct_t;
typedef struct bicycl_ecdsa_t bicycl_ecdsa_t;
typedef struct bicycl_ecdsa_sk_t bicycl_ecdsa_sk_t;
typedef struct bicycl_ecdsa_pk_t bicycl_ecdsa_pk_t;
typedef struct bicycl_ecdsa_sig_t bicycl_ecdsa_sig_t;
typedef struct bicycl_two_party_ecdsa_session_t bicycl_two_party_ecdsa_session_t;
typedef struct bicycl_cl_dlog_session_t bicycl_cl_dlog_session_t;
typedef struct bicycl_threshold_ecdsa_session_t bicycl_threshold_ecdsa_session_t;
typedef struct bicycl_cl_dlog_message_t bicycl_cl_dlog_message_t;
bicycl_status_t bicycl_cl_hsm2k_scal_ciphertext_decimal(
    bicycl_context_t *ctx,
    const bicycl_cl_hsm2k_t *cl,
    const bicycl_cl_hsm2k_pk_t *pk,
    bicycl_randgen_t *randgen,
    const bicycl_cl_hsm2k_ct_t *ct,
    const char *scalar_decimal,
    bicycl_cl_hsm2k_ct_t **out_ct);
bicycl_status_t bicycl_cl_hsm2k_addscal_ciphertexts_decimal(
    bicycl_context_t *ctx,
    const bicycl_cl_hsm2k_t *cl,
    const bicycl_cl_hsm2k_pk_t *pk,
    bicycl_randgen_t *randgen,
    const bicycl_cl_hsm2k_ct_t *ca,
    const bicycl_cl_hsm2k_ct_t *cb,
    const char *scalar_decimal,
    bicycl_cl_hsm2k_ct_t **out_ct);
bicycl_status_t bicycl_ecdsa_new(
    bicycl_context_t *ctx,
    uint32_t seclevel_bits,
    bicycl_ecdsa_t **out_ecdsa);
void bicycl_ecdsa_free(bicycl_ecdsa_t *ecdsa);
bicycl_status_t bicycl_ecdsa_keygen(
    bicycl_context_t *ctx,
    const bicycl_ecdsa_t *ecdsa,
    bicycl_randgen_t *randgen,
    bicycl_ecdsa_sk_t **out_sk,
    bicycl_ecdsa_pk_t **out_pk);
void bicycl_ecdsa_sk_free(bicycl_ecdsa_sk_t *sk);
void bicycl_ecdsa_pk_free(bicycl_ecdsa_pk_t *pk);
bicycl_status_t bicycl_ecdsa_sign_message(
    bicycl_context_t *ctx,
    const bicycl_ecdsa_t *ecdsa,
    bicycl_randgen_t *randgen,
    const bicycl_ecdsa_sk_t *sk,
    const uint8_t *msg_ptr,
    size_t msg_len,
    bicycl_ecdsa_sig_t **out_sig);
void bicycl_ecdsa_sig_free(bicycl_ecdsa_sig_t *sig);
bicycl_status_t bicycl_ecdsa_verify_message(
    bicycl_context_t *ctx,
    const bicycl_ecdsa_t *ecdsa,
    const bicycl_ecdsa_pk_t *pk,
    const uint8_t *msg_ptr,
    size_t msg_len,
    const bicycl_ecdsa_sig_t *sig,
    int *out_valid);
bicycl_status_t bicycl_ecdsa_sig_r_decimal(
    bicycl_context_t *ctx,
    const bicycl_ecdsa_sig_t *sig,
    char *out_buf,
    size_t *inout_len);
bicycl_status_t bicycl_ecdsa_sig_s_decimal(
    bicycl_context_t *ctx,
    const bicycl_ecdsa_sig_t *sig,
    char *out_buf,
    size_t *inout_len);
bicycl_status_t bicycl_two_party_ecdsa_run_demo(
    bicycl_context_t *ctx,
    bicycl_randgen_t *randgen,
    uint32_t seclevel_bits,
    const uint8_t *msg_ptr,
    size_t msg_len,
    int *out_valid);
bicycl_status_t bicycl_two_party_ecdsa_session_new(
    bicycl_context_t *ctx,
    bicycl_randgen_t *randgen,
    uint32_t seclevel_bits,
    bicycl_two_party_ecdsa_session_t **out_session);
void bicycl_two_party_ecdsa_session_free(bicycl_two_party_ecdsa_session_t *session);
bicycl_status_t bicycl_two_party_ecdsa_keygen_round1(
    bicycl_context_t *ctx,
    bicycl_two_party_ecdsa_session_t *session,
    bicycl_randgen_t *randgen);
bicycl_status_t bicycl_two_party_ecdsa_keygen_round2(
    bicycl_context_t *ctx,
    bicycl_two_party_ecdsa_session_t *session,
    bicycl_randgen_t *randgen);
bicycl_status_t bicycl_two_party_ecdsa_keygen_round3(
    bicycl_context_t *ctx,
    bicycl_two_party_ecdsa_session_t *session,
    bicycl_randgen_t *randgen);
bicycl_status_t bicycl_two_party_ecdsa_keygen_round4(
    bicycl_context_t *ctx,
    bicycl_two_party_ecdsa_session_t *session);
bicycl_status_t bicycl_two_party_ecdsa_sign_round1(
    bicycl_context_t *ctx,
    bicycl_two_party_ecdsa_session_t *session,
    bicycl_randgen_t *randgen,
    const uint8_t *msg_ptr,
    size_t msg_len);
bicycl_status_t bicycl_two_party_ecdsa_sign_round2(
    bicycl_context_t *ctx,
    bicycl_two_party_ecdsa_session_t *session,
    bicycl_randgen_t *randgen);
bicycl_status_t bicycl_two_party_ecdsa_sign_round3(
    bicycl_context_t *ctx,
    bicycl_two_party_ecdsa_session_t *session);
bicycl_status_t bicycl_two_party_ecdsa_sign_round4(
    bicycl_context_t *ctx,
    bicycl_two_party_ecdsa_session_t *session,
    bicycl_randgen_t *randgen);
bicycl_status_t bicycl_two_party_ecdsa_sign_finalize(
    bicycl_context_t *ctx,
    bicycl_two_party_ecdsa_session_t *session,
    int *out_valid);
bicycl_status_t bicycl_cl_threshold_run_demo(
    bicycl_context_t *ctx,
    bicycl_randgen_t *randgen,
    char *out_buf,
    size_t *inout_len);
bicycl_status_t bicycl_cl_dlog_proof_run_demo(
    bicycl_context_t *ctx,
    bicycl_randgen_t *randgen,
    uint32_t seclevel_bits,
    int *out_valid);
bicycl_status_t bicycl_threshold_ecdsa_run_demo(
    bicycl_context_t *ctx,
    bicycl_randgen_t *randgen,
    uint32_t seclevel_bits,
    const uint8_t *msg_ptr,
    size_t msg_len,
    int *out_valid);
bicycl_status_t bicycl_cl_dlog_session_new(
    bicycl_context_t *ctx,
    bicycl_randgen_t *randgen,
    uint32_t seclevel_bits,
    bicycl_cl_dlog_session_t **out_session);
void bicycl_cl_dlog_session_free(bicycl_cl_dlog_session_t *session);
bicycl_status_t bicycl_cl_dlog_session_prepare_statement(
    bicycl_context_t *ctx,
    bicycl_cl_dlog_session_t *session,
    bicycl_randgen_t *randgen);
bicycl_status_t bicycl_cl_dlog_session_prove_round(
    bicycl_context_t *ctx,
    bicycl_cl_dlog_session_t *session,
    bicycl_randgen_t *randgen);
bicycl_status_t bicycl_cl_dlog_session_verify_round(
    bicycl_context_t *ctx,
    const bicycl_cl_dlog_session_t *session,
    int *out_valid);
bicycl_status_t bicycl_cl_dlog_message_new(bicycl_cl_dlog_message_t **out_msg);
void bicycl_cl_dlog_message_free(bicycl_cl_dlog_message_t *msg);
bicycl_status_t bicycl_cl_dlog_message_export_bytes(
    bicycl_context_t *ctx,
    const bicycl_cl_dlog_message_t *msg,
    uint8_t *out_buf,
    size_t *inout_len);
bicycl_status_t bicycl_cl_dlog_message_import_bytes(
    bicycl_context_t *ctx,
    bicycl_cl_dlog_message_t *msg,
    const uint8_t *bytes,
    size_t len);
bicycl_status_t bicycl_cl_dlog_session_export_statement(
    bicycl_context_t *ctx,
    const bicycl_cl_dlog_session_t *session,
    bicycl_cl_dlog_message_t *out_msg);
bicycl_status_t bicycl_cl_dlog_session_import_statement(
    bicycl_context_t *ctx,
    bicycl_cl_dlog_session_t *session,
    const bicycl_cl_dlog_message_t *msg);
bicycl_status_t bicycl_cl_dlog_session_export_proof(
    bicycl_context_t *ctx,
    const bicycl_cl_dlog_session_t *session,
    bicycl_cl_dlog_message_t *out_msg);
bicycl_status_t bicycl_cl_dlog_session_import_proof(
    bicycl_context_t *ctx,
    bicycl_cl_dlog_session_t *session,
    const bicycl_cl_dlog_message_t *msg);
bicycl_status_t bicycl_threshold_ecdsa_session_new(
    bicycl_context_t *ctx,
    bicycl_randgen_t *randgen,
    uint32_t seclevel_bits,
    uint32_t n_players,
    uint32_t threshold_t,
    bicycl_threshold_ecdsa_session_t **out_session);
void bicycl_threshold_ecdsa_session_free(bicycl_threshold_ecdsa_session_t *session);
bicycl_status_t bicycl_threshold_ecdsa_keygen_round1(
    bicycl_context_t *ctx,
    bicycl_threshold_ecdsa_session_t *session,
    bicycl_randgen_t *randgen);
bicycl_status_t bicycl_threshold_ecdsa_keygen_round2(
    bicycl_context_t *ctx,
    bicycl_threshold_ecdsa_session_t *session,
    bicycl_randgen_t *randgen);
bicycl_status_t bicycl_threshold_ecdsa_keygen_finalize(
    bicycl_context_t *ctx,
    bicycl_threshold_ecdsa_session_t *session);
bicycl_status_t bicycl_threshold_ecdsa_sign_round1(
    bicycl_context_t *ctx,
    bicycl_threshold_ecdsa_session_t *session,
    bicycl_randgen_t *randgen,
    const uint8_t *msg_ptr,
    size_t msg_len);
bicycl_status_t bicycl_threshold_ecdsa_sign_round2(
    bicycl_context_t *ctx,
    bicycl_threshold_ecdsa_session_t *session,
    bicycl_randgen_t *randgen);
bicycl_status_t bicycl_threshold_ecdsa_sign_round3(
    bicycl_context_t *ctx,
    bicycl_threshold_ecdsa_session_t *session);
bicycl_status_t bicycl_threshold_ecdsa_sign_round4(
    bicycl_context_t *ctx,
    bicycl_threshold_ecdsa_session_t *session);
bicycl_status_t bicycl_threshold_ecdsa_sign_round5(
    bicycl_context_t *ctx,
    bicycl_threshold_ecdsa_session_t *session,
    bicycl_randgen_t *randgen);
bicycl_status_t bicycl_threshold_ecdsa_sign_round6(
    bicycl_context_t *ctx,
    bicycl_threshold_ecdsa_session_t *session,
    bicycl_randgen_t *randgen);
bicycl_status_t bicycl_threshold_ecdsa_sign_round7(
    bicycl_context_t *ctx,
    bicycl_threshold_ecdsa_session_t *session,
    bicycl_randgen_t *randgen);
bicycl_status_t bicycl_threshold_ecdsa_sign_round8(
    bicycl_context_t *ctx,
    bicycl_threshold_ecdsa_session_t *session);
bicycl_status_t bicycl_threshold_ecdsa_sign_finalize(
    bicycl_context_t *ctx,
    bicycl_threshold_ecdsa_session_t *session);
bicycl_status_t bicycl_threshold_ecdsa_signature_valid(
    bicycl_context_t *ctx,
    const bicycl_threshold_ecdsa_session_t *session,
    int *out_valid);