vendor/bicycl-rs-sys/src/lib.rs


    pub fn bicycl_cl_hsm2k_scal_ciphertext_decimal(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsm2k_t,
        pk: *const bicycl_cl_hsm2k_pk_t,
        randgen: *mut bicycl_randgen_t,
        ct: *const bicycl_cl_hsm2k_ct_t,
        scalar_decimal: *const c_char,
        out_ct: *mut *mut bicycl_cl_hsm2k_ct_t,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_hsm2k_addscal_ciphertexts_decimal(
        ctx: *mut bicycl_context_t,
        cl: *const bicycl_cl_hsm2k_t,
        pk: *const bicycl_cl_hsm2k_pk_t,
        randgen: *mut bicycl_randgen_t,
        ca: *const bicycl_cl_hsm2k_ct_t,
        cb: *const bicycl_cl_hsm2k_ct_t,
        scalar_decimal: *const c_char,
        out_ct: *mut *mut bicycl_cl_hsm2k_ct_t,
    ) -> bicycl_status_t;

    pub fn bicycl_ecdsa_new(
        ctx: *mut bicycl_context_t,
        seclevel_bits: u32,
        out_ecdsa: *mut *mut bicycl_ecdsa_t,
    ) -> bicycl_status_t;
    pub fn bicycl_ecdsa_free(ecdsa: *mut bicycl_ecdsa_t);

    pub fn bicycl_ecdsa_keygen(
        ctx: *mut bicycl_context_t,
        ecdsa: *const bicycl_ecdsa_t,
        randgen: *mut bicycl_randgen_t,
        out_sk: *mut *mut bicycl_ecdsa_sk_t,
        out_pk: *mut *mut bicycl_ecdsa_pk_t,
    ) -> bicycl_status_t;
    pub fn bicycl_ecdsa_sk_free(sk: *mut bicycl_ecdsa_sk_t);
    pub fn bicycl_ecdsa_pk_free(pk: *mut bicycl_ecdsa_pk_t);

    pub fn bicycl_ecdsa_sign_message(
        ctx: *mut bicycl_context_t,
        ecdsa: *const bicycl_ecdsa_t,
        randgen: *mut bicycl_randgen_t,
        sk: *const bicycl_ecdsa_sk_t,
        msg_ptr: *const u8,
        msg_len: usize,
        out_sig: *mut *mut bicycl_ecdsa_sig_t,
    ) -> bicycl_status_t;
    pub fn bicycl_ecdsa_sig_free(sig: *mut bicycl_ecdsa_sig_t);

    pub fn bicycl_ecdsa_verify_message(
        ctx: *mut bicycl_context_t,
        ecdsa: *const bicycl_ecdsa_t,
        pk: *const bicycl_ecdsa_pk_t,
        msg_ptr: *const u8,
        msg_len: usize,
        sig: *const bicycl_ecdsa_sig_t,
        out_valid: *mut c_int,
    ) -> bicycl_status_t;

    pub fn bicycl_ecdsa_sig_r_decimal(
        ctx: *mut bicycl_context_t,
        sig: *const bicycl_ecdsa_sig_t,
        out_buf: *mut c_char,
        inout_len: *mut usize,
    ) -> bicycl_status_t;

    pub fn bicycl_ecdsa_sig_s_decimal(
        ctx: *mut bicycl_context_t,
        sig: *const bicycl_ecdsa_sig_t,
        out_buf: *mut c_char,
        inout_len: *mut usize,
    ) -> bicycl_status_t;

    pub fn bicycl_two_party_ecdsa_run_demo(
        ctx: *mut bicycl_context_t,
        randgen: *mut bicycl_randgen_t,
        seclevel_bits: u32,
        msg_ptr: *const u8,
        msg_len: usize,
        out_valid: *mut c_int,
    ) -> bicycl_status_t;
    pub fn bicycl_two_party_ecdsa_session_new(
        ctx: *mut bicycl_context_t,
        randgen: *mut bicycl_randgen_t,
        seclevel_bits: u32,
        out_session: *mut *mut bicycl_two_party_ecdsa_session_t,
    ) -> bicycl_status_t;
    pub fn bicycl_two_party_ecdsa_session_free(session: *mut bicycl_two_party_ecdsa_session_t);
    pub fn bicycl_two_party_ecdsa_keygen_round1(
        ctx: *mut bicycl_context_t,
        session: *mut bicycl_two_party_ecdsa_session_t,
        randgen: *mut bicycl_randgen_t,
    ) -> bicycl_status_t;
    pub fn bicycl_two_party_ecdsa_keygen_round2(
        ctx: *mut bicycl_context_t,
        session: *mut bicycl_two_party_ecdsa_session_t,
        randgen: *mut bicycl_randgen_t,
    ) -> bicycl_status_t;
    pub fn bicycl_two_party_ecdsa_keygen_round3(
        ctx: *mut bicycl_context_t,
        session: *mut bicycl_two_party_ecdsa_session_t,
        randgen: *mut bicycl_randgen_t,
    ) -> bicycl_status_t;
    pub fn bicycl_two_party_ecdsa_keygen_round4(
        ctx: *mut bicycl_context_t,
        session: *mut bicycl_two_party_ecdsa_session_t,
    ) -> bicycl_status_t;
    pub fn bicycl_two_party_ecdsa_sign_round1(
        ctx: *mut bicycl_context_t,
        session: *mut bicycl_two_party_ecdsa_session_t,
        randgen: *mut bicycl_randgen_t,
        msg_ptr: *const u8,
        msg_len: usize,
    ) -> bicycl_status_t;
    pub fn bicycl_two_party_ecdsa_sign_round2(
        ctx: *mut bicycl_context_t,
        session: *mut bicycl_two_party_ecdsa_session_t,
        randgen: *mut bicycl_randgen_t,
    ) -> bicycl_status_t;
    pub fn bicycl_two_party_ecdsa_sign_round3(
        ctx: *mut bicycl_context_t,
        session: *mut bicycl_two_party_ecdsa_session_t,
    ) -> bicycl_status_t;
    pub fn bicycl_two_party_ecdsa_sign_round4(
        ctx: *mut bicycl_context_t,
        session: *mut bicycl_two_party_ecdsa_session_t,
        randgen: *mut bicycl_randgen_t,
    ) -> bicycl_status_t;
    pub fn bicycl_two_party_ecdsa_sign_finalize(
        ctx: *mut bicycl_context_t,
        session: *mut bicycl_two_party_ecdsa_session_t,
        out_valid: *mut c_int,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_threshold_run_demo(
        ctx: *mut bicycl_context_t,
        randgen: *mut bicycl_randgen_t,
        out_buf: *mut c_char,
        inout_len: *mut usize,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_dlog_proof_run_demo(
        ctx: *mut bicycl_context_t,
        randgen: *mut bicycl_randgen_t,
        seclevel_bits: u32,
        out_valid: *mut c_int,
    ) -> bicycl_status_t;

    pub fn bicycl_threshold_ecdsa_run_demo(
        ctx: *mut bicycl_context_t,
        randgen: *mut bicycl_randgen_t,
        seclevel_bits: u32,
        msg_ptr: *const u8,
        msg_len: usize,
        out_valid: *mut c_int,
    ) -> bicycl_status_t;

    pub fn bicycl_cl_dlog_session_new(
        ctx: *mut bicycl_context_t,
        randgen: *mut bicycl_randgen_t,
        seclevel_bits: u32,
        out_session: *mut *mut bicycl_cl_dlog_session_t,
    ) -> bicycl_status_t;
    pub fn bicycl_cl_dlog_session_free(session: *mut bicycl_cl_dlog_session_t);
    pub fn bicycl_cl_dlog_session_prepare_statement(
        ctx: *mut bicycl_context_t,
        session: *mut bicycl_cl_dlog_session_t,
        randgen: *mut bicycl_randgen_t,
    ) -> bicycl_status_t;
    pub fn bicycl_cl_dlog_session_prove_round(
        ctx: *mut bicycl_context_t,
        session: *mut bicycl_cl_dlog_session_t,
        randgen: *mut bicycl_randgen_t,
    ) -> bicycl_status_t;
    pub fn bicycl_cl_dlog_session_verify_round(
        ctx: *mut bicycl_context_t,
        session: *const bicycl_cl_dlog_session_t,
        out_valid: *mut c_int,
    ) -> bicycl_status_t;
    pub fn bicycl_cl_dlog_message_new(
        out_msg: *mut *mut bicycl_cl_dlog_message_t,
    ) -> bicycl_status_t;
    pub fn bicycl_cl_dlog_message_free(msg: *mut bicycl_cl_dlog_message_t);
    pub fn bicycl_cl_dlog_message_export_bytes(
        ctx: *mut bicycl_context_t,
        msg: *const bicycl_cl_dlog_message_t,
        out_buf: *mut u8,
        inout_len: *mut usize,
    ) -> bicycl_status_t;
    pub fn bicycl_cl_dlog_message_import_bytes(
        ctx: *mut bicycl_context_t,
        msg: *mut bicycl_cl_dlog_message_t,
        bytes: *const u8,
        len: usize,
    ) -> bicycl_status_t;
    pub fn bicycl_cl_dlog_session_export_statement(
        ctx: *mut bicycl_context_t,
        session: *const bicycl_cl_dlog_session_t,
        out_msg: *mut bicycl_cl_dlog_message_t,
    ) -> bicycl_status_t;
    pub fn bicycl_cl_dlog_session_import_statement(
        ctx: *mut bicycl_context_t,
        session: *mut bicycl_cl_dlog_session_t,
        msg: *const bicycl_cl_dlog_message_t,
    ) -> bicycl_status_t;
    pub fn bicycl_cl_dlog_session_export_proof(
        ctx: *mut bicycl_context_t,
        session: *const bicycl_cl_dlog_session_t,
        out_msg: *mut bicycl_cl_dlog_message_t,
    ) -> bicycl_status_t;
    pub fn bicycl_cl_dlog_session_import_proof(
        ctx: *mut bicycl_context_t,
        session: *mut bicycl_cl_dlog_session_t,
        msg: *const bicycl_cl_dlog_message_t,
    ) -> bicycl_status_t;

    pub fn bicycl_threshold_ecdsa_session_new(
        ctx: *mut bicycl_context_t,
        randgen: *mut bicycl_randgen_t,
        seclevel_bits: u32,
        n_players: u32,
        threshold_t: u32,
        out_session: *mut *mut bicycl_threshold_ecdsa_session_t,
    ) -> bicycl_status_t;
    pub fn bicycl_threshold_ecdsa_session_free(session: *mut bicycl_threshold_ecdsa_session_t);
    pub fn bicycl_threshold_ecdsa_keygen_round1(
        ctx: *mut bicycl_context_t,
        session: *mut bicycl_threshold_ecdsa_session_t,
        randgen: *mut bicycl_randgen_t,
    ) -> bicycl_status_t;
    pub fn bicycl_threshold_ecdsa_keygen_round2(
        ctx: *mut bicycl_context_t,
        session: *mut bicycl_threshold_ecdsa_session_t,
        randgen: *mut bicycl_randgen_t,
    ) -> bicycl_status_t;
    pub fn bicycl_threshold_ecdsa_keygen_finalize(
        ctx: *mut bicycl_context_t,
        session: *mut bicycl_threshold_ecdsa_session_t,
    ) -> bicycl_status_t;
    pub fn bicycl_threshold_ecdsa_sign_round1(
        ctx: *mut bicycl_context_t,
        session: *mut bicycl_threshold_ecdsa_session_t,
        randgen: *mut bicycl_randgen_t,
        msg_ptr: *const u8,
        msg_len: usize,
    ) -> bicycl_status_t;
    pub fn bicycl_threshold_ecdsa_sign_round2(
        ctx: *mut bicycl_context_t,
        session: *mut bicycl_threshold_ecdsa_session_t,
        randgen: *mut bicycl_randgen_t,
    ) -> bicycl_status_t;
    pub fn bicycl_threshold_ecdsa_sign_round3(
        ctx: *mut bicycl_context_t,
        session: *mut bicycl_threshold_ecdsa_session_t,
    ) -> bicycl_status_t;
    pub fn bicycl_threshold_ecdsa_sign_round4(
        ctx: *mut bicycl_context_t,
        session: *mut bicycl_threshold_ecdsa_session_t,
    ) -> bicycl_status_t;
    pub fn bicycl_threshold_ecdsa_sign_round5(
        ctx: *mut bicycl_context_t,
        session: *mut bicycl_threshold_ecdsa_session_t,
        randgen: *mut bicycl_randgen_t,
    ) -> bicycl_status_t;
    pub fn bicycl_threshold_ecdsa_sign_round6(
        ctx: *mut bicycl_context_t,
        session: *mut bicycl_threshold_ecdsa_session_t,
        randgen: *mut bicycl_randgen_t,
    ) -> bicycl_status_t;
    pub fn bicycl_threshold_ecdsa_sign_round7(
        ctx: *mut bicycl_context_t,
        session: *mut bicycl_threshold_ecdsa_session_t,
        randgen: *mut bicycl_randgen_t,
    ) -> bicycl_status_t;
    pub fn bicycl_threshold_ecdsa_sign_round8(
        ctx: *mut bicycl_context_t,
        session: *mut bicycl_threshold_ecdsa_session_t,
    ) -> bicycl_status_t;
    pub fn bicycl_threshold_ecdsa_sign_finalize(
        ctx: *mut bicycl_context_t,
        session: *mut bicycl_threshold_ecdsa_session_t,
    ) -> bicycl_status_t;
    pub fn bicycl_threshold_ecdsa_signature_valid(
        ctx: *mut bicycl_context_t,
        session: *const bicycl_threshold_ecdsa_session_t,
        out_valid: *mut c_int,
    ) -> bicycl_status_t;
}
